# backend

./: .env.dist  .env.test  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  run_tests.py
ai/: __init__.py  models.py  prompts.py  schemas.py  serializers.py  settings.py  urls.py  usecases.py  views.py
ai/tests/: __init__.py  conftest.py  test_django.py  test_usecases.py  test_views.py
leitner/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
leitner/migrations/: 0002_alter_customuser_groups_and_more.py  0003_alter_customuser_managers.py  0004_alter_card_next_recall.py  0005_alter_language_options_alter_language_code_and_more.py  0006_alter_box_description.py  0007_populate_languages.py  0008_alter_language_code.py
leitner/tests/: __init__.py  conftest.py  test_django.py  test_models.py  test_serializers.py  test_views.py
memobox/: asgi.py  manage.py  settings.py  urls.py
memobox/leitner/migrations/: 0001_initial.py
memobox/memobox/: settings.py  urls.py  wsgi.py
