[project]
name = "memoboxproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-rest-framework>=0.1.0",
    "langchain-openai>=0.3.8",
    "openai>=1.0.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.0",
]
